# isogon

./: .gitignore  Cargo.toml  README.md  readme.md  rust-toolchain.toml  rustfmt.toml
eval/: .clang-format  utility.hh
eval/ctime/: Makefile  bench.py  fib.cc  mklist.cc  mklist.is  pow.cc  pow.is  unzip.cc  unzip.is
eval/fib/: Makefile  fib.is  main.cc  test.py
eval/unzip/: main.cc
examples/: absurd_input.is  bool.is  clone.is  copy.is  empty.is  enum_usage.is  fib.is  fib_input.is  graded_let_leak.is  graded_patterns.is  leaky_nt.is  leaky_tr.is  logical_dead.is  nat.is  natswap.is  omega_exp.is  promote_input.is  refl.is  signat.is  swap_large_input.is  swap_small.is  synth_pair.is  test.is  transport.is  unit.is  variadic.is  vec.is
nonexamples/: hurkens.is  swap_mixed_input.is
src/: alpha.rs  common.rs  lib.rs  main.rs  op.rs  parse.rs  report.rs  utility.rs
src/backend/: emit.rs  flatten.rs  interpret.rs  linearize.rs  mod.rs  stage.rs  unstage.rs
src/beta/: common.rs  domain.rs  elaborator.rs  meta.rs  mod.rs  presyntax.rs  syntax.rs
src/delta/: common.rs  mod.rs  sourcify.rs
src/exec/: linear.rs
src/frontend/: conversion.rs  elaborate.rs  evaluate.rs  lex.rs  mod.rs  parse.rs  unevaluate.rs
src/gamma/: closer.rs  common.rs  conversion.rs  elaborator.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs  sequentializer.rs  sourcify.rs  stager.rs
src/ir/: flat.rs  linear.rs  mod.rs  object.rs  presyntax.rs  semantics.rs  source.rs  syntax.rs  tokenized.rs
src/op/: conversion.rs  elaborate.rs  emit.rs  evaluate.rs  (+9 more)
tests/: common.rs  main.rs
(+80 files in other folders)
