[package]
name = "isogon"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Aaron Yeoh Cruz <zeyonaut@gmail.com>"]
exclude = ["/eval", "/.*"]

[dependencies]
bpaf = "0.9.11"
cranelift = "0.107.0"
cranelift-module = "0.107.0"
cranelift-object = "0.107.0"
lasso = "0.7.2"
peg = "0.8.2"
target-lexicon = "0.12.14"
unicode-width = "0.1.11"

# NOTE: Used to reduce risk of stack overflow.
[profile.dev]
opt-level = 1
